# TensorRT-Vision

./: .gitignore  README.md  meson.build  meson_options.txt
app/: meson.build
app/classifier/: README.md  classifier.cpp  classifier.hpp  config.json  main.cpp  meson.build
app/detector/: README.md  main.cpp  meson.build
app/mot/: README.md  main.cpp  meson.build
app/reid/: README.md  main.cpp  meson.build  reid.cpp  reid.hpp  requirements.txt  torchreid-cli.py
app/segmenter/: README.md  main.cpp  meson.build
app/yolo/: README.md  main.cpp  meson.build  yolo.cpp  yolo.hpp
app/yolo-seg/: main.cpp  meson.build
examples/: meson.build
examples/classification/: README.md  config.json  main.cpp
examples/reid/: main.cpp  torchreid-cli.py
include/common/: cuda_utils.hpp  detection.hpp  frame.hpp  letterbox.hpp  tensorrt_utils.hpp
include/engine/: classifier.hpp  engine.hpp  interface.hpp  logger.hpp  processor.hpp  processor.impl.hpp  reid.hpp  utils.hpp  yolo.hpp
include/models/classification/: classifier.hpp
include/models/detection/: detector.hpp  factory.hpp  yolo.hpp
include/models/reid/: reid.hpp
include/models/segmentation/: factory.hpp  segmenter.hpp  yolo.hpp
include/tracking/: botsort.hpp  factory.hpp  sort.hpp  tracker.hpp
include/types/: detection.hpp  frame.hpp
include/utils/: detection_utils.hpp  json_utils.hpp
src/: classifier.cpp  engine.cpp  processor.cpp  reid.cpp  yolo.cpp
src/engine/: classifier.cpp  engine.cpp  reid.cpp  yolo.cpp
src/models/classification/: classifier.cpp
src/models/detection/: yolo.cpp
src/models/reid/: reid.cpp
src/models/segmentation/: yolo.cpp
src/tracking/: botsort.cpp  sort.cpp
src/tracking/kalman/: xysr.cpp  xywh.cpp
subprojects/: mot.cpp.wrap
